[package]
name = "faces_quic_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quiche_client_testing"
path = "./bin_test/main_client_test.rs"

[dependencies]
quiche = "0.23.2"
log = "0.4.25"
mio = { version = "1.0.3", features = ["net", "os-poll"] }
ring = "0.17.9"
crossbeam = "0.8.4"
env_logger = "0.11.6"
uuid = { version = "1.16.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stream_framer = { path = "../stream-framer/" }
notify-rust = "4.11.7"
